2005-03-14  Quentin Mathe  <qmathe@club-internet.fr>
    
    * Headers/IconKit.h:
    * Headers/IKIcon.h:
    * Headers/IKIconIdentifier.h
    * Headers/IKIconPositions.h:
    * Headers/IKWorkspaceAdditions.h:
    Updated indentation to be more in line with Etoile and GNUstep coding
    guidelines.

2005-03-14  Quentin Mathe  <qmathe@club-internet.fr>
    
    * Headers/IconKit.h:
    * Headers/IKIcon.h:
    * Headers/IKIconIdentifier.h
    * Headers/IKIconPositions.h:
    * Headers/IKWorkspaceAdditions.h:
    * Source/IKIcon.m:
    * Source/IKWorkspaceAdditions.m:
    Added IconKit new GNUstep version related files written by Uli Kusterer.
    
2005-03-10  Quentin Mathe  <qmathe@club-internet.fr>
    
    * INSTALL: Updated to talk about IconKit and not Gorm.
    * Source/GNUmakefile: Improved formatting.
    
2004-11-10  Quentin Mathe  <qmathe@club-internet.fr>
        
	* Source/IKCompositor.m: Makes the code compliant with the GNUstep
	coding rules (memory management macros, designated initializer) and
	improved the -render method to return an image with a bitmap
	representation which can be written to the disk in whatever image
	formats supported. 

2004-11-09  Quentin Mathe  <qmathe@club-internet.fr>
        
	WARNING: many things don't work
    * Headers/IKIconProvider.h:
	* Source/IKApplicationIconProvider.m:
	* Source/IKIconProvider.m:
    * Source/IKThumbnailProvider.m:
	Many corrections to make the framework partially works.

2004-08-24  Quentin Mathe <qmathe@club-internet.fr>

    WARNING: not tested.
    * Headers/IKApplicationIconProvider.h:
    * Headers/IKCompositor.h:
    * Headers/IKIconProvider.h:
    * Headers/IKThumbnailProvider.h:
    * Headers/NSFileManager+IconKit.h:
    * Source/IKApplicationIconProvider.m:
    * Source/IKIconProvider.m:
    * Source/NSFileManager+IconKit.m:
    * Source/GNUmakefile:
    Lot of corrections to make the framework compiles.

2004-08-17  Quentin Mathe <qmathe@club-internet.fr>
        